# CleverGit

./: .gitignore  BLAME_IMPLEMENTATION_SUMMARY.md  BLAME_USER_GUIDE.md  BRANCH_COMPARISON_GUIDE.md  BRANCH_COMPARISON_IMPLEMENTATION_SUMMARY.md  COMMAND_PALETTE_GUIDE.md  COMMAND_PALETTE_IMPLEMENTATION.md  CONFLICT_RESOLUTION_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT_ROADMAP.md  DIFF_COMPARISON.md  DIFF_IMPROVEMENTS.md  DIFF_VIEWER_IMPLEMENTATION_SUMMARY.md  DIFF_VIEWER_README.md  DIFF_VIEWER_USAGE_GUIDE.md  FEATURE_COMPLETION_SUMMARY.md  GIT_FLOW_GUIDE.md  GIT_FLOW_IMPLEMENTATION_SUMMARY.md  GRAPH_VIEW_DOCUMENTATION.md  GUI_USAGE.md  HUNK_STAGING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KEYBOARD_SHORTCUTS_GUIDE.md  KEYBOARD_SHORTCUTS_IMPLEMENTATION.md  LICENSE  MANIFEST.in  MERGE_TOOL_DOCUMENTATION.md  MULTI_TAB_ARCHITECTURE.md  MULTI_TAB_GUIDE.md  MULTI_TAB_IMPLEMENTATION_SUMMARY.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_SYSTEM_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION.md  QUICK_START.md  README.MD  README_en.md  README_zh.md  STASH_IMPLEMENTATION_SUMMARY.md  STASH_MANAGEMENT_GUIDE.md  TAG_IMPLEMENTATION_SUMMARY.md  TAG_MANAGEMENT_GUIDE.md  (+14 more)
.github/workflows/: publish-github-packages.yml
clevergit/: __init__.py
clevergit/cli/: __init__.py  app.py  branch_cmd.py  commit_cmd.py  remote_cmd.py  repo_cmd.py
clevergit/core/: blame.py  branch.py  cherry_pick.py  commit.py  conflict.py  diff.py  git_flow.py  graph.py  log.py  merge.py  remote.py  repo.py  revert.py  stash.py  status.py  tag.py
clevergit/git/: __init__.py  client.py  errors.py
clevergit/integrations/: __init__.py  github.py  gitlab.py
clevergit/models/: __init__.py  blame_info.py  branch_comparison.py  branch_info.py  commit_info.py  file_status.py  stash_info.py  tag_info.py
clevergit/plugins/: __init__.py  config.py  interface.py  loader.py  manager.py
clevergit/plugins/builtin/: __init__.py  example_plugin.py
clevergit/ui/: __init__.py  main.py  settings.py  shortcuts.py
clevergit/ui/themes/: __init__.py  base.py  dark.py  light.py  manager.py
clevergit/ui/widgets/: __init__.py  blame_view.py  branch_compare_dialog.py  branch_view.py  cherry_pick_dialog.py  clone_dialog.py  command_palette.py  commit_dialog.py  diff_viewer.py  git_flow_panel.py  github_panel.py  gitlab_panel.py  graph_view.py  log_view.py  merge_tool.py  repo_view.py  repository_tab.py  reset_dialog.py  revert_dialog.py  shortcuts_dialog.py  stash_view.py  status_view.py  tag_view.py  welcome_screen.py
clevergit/ui/windows/: __init__.py  main_window.py
clevergit/utils/: formatter.py  helpers.py
tests/: test_blame.py  test_branch.py  test_cherry_pick.py  test_clone.py  test_command_palette.py  test_commit.py  test_conflict.py  test_diff.py  test_git_flow.py  test_github_integration.py  test_gitlab_integration.py  test_graph.py  test_hunk_staging.py  test_plugin_system.py  test_remote.py  test_repo.py  test_reset.py  test_revert.py  test_settings.py  test_shortcuts.py  test_stash.py  test_status.py  test_tag.py  test_themes.py
